Bug 698381 - Make Node.cloneNode aDeep argument optional, default to true. r=smaug